// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly in mobile is fillable 1`] = `
<div>
  <div
    class="object-panel-item"
  >
    <div
      class="main"
    >
      <button
        aria-checked="false"
        class="ant-switch css-dev-only-do-not-override-hash"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          <span
            class="ant-switch-inner-checked"
          />
          <span
            class="ant-switch-inner-unchecked"
          />
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile is fillable 2`] = `
<div>
  <div
    class="object-panel-item"
  >
    <div
      class="main"
    >
      <button
        aria-checked="true"
        class="ant-switch css-dev-only-do-not-override-hash ant-switch-checked"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          <span
            class="ant-switch-inner-checked"
          />
          <span
            class="ant-switch-inner-unchecked"
          />
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile is fillable 3`] = `
<div>
  <div
    class="object-panel-item"
  >
    <div
      class="main"
    >
      <button
        aria-checked="false"
        class="ant-switch css-dev-only-do-not-override-hash"
        role="switch"
        type="button"
      >
        <div
          class="ant-switch-handle"
        />
        <span
          class="ant-switch-inner"
        >
          <span
            class="ant-switch-inner-checked"
          />
          <span
            class="ant-switch-inner-unchecked"
          />
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Infill
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile is not fillable 1`] = `<div />`;

exports[`should render correctly is fillable 1`] = `
<div>
  <div
    class="option-block"
  >
    <div
      class="label"
    >
      Infill
    </div>
    <div
      class="onoffswitch"
      id="infill"
    >
      <input
        class="onoffswitch-checkbox"
        readonly=""
        type="checkbox"
      />
      <label
        class="onoffswitch-label"
      >
        <span
          class="onoffswitch-inner"
        />
        <span
          class="onoffswitch-switch"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`should render correctly is fillable 2`] = `
<div>
  <div
    class="option-block"
  >
    <div
      class="label"
    >
      Infill
    </div>
    <div
      class="onoffswitch"
      id="infill"
    >
      <input
        class="onoffswitch-checkbox"
        readonly=""
        type="checkbox"
      />
      <label
        class="onoffswitch-label"
      >
        <span
          class="onoffswitch-inner"
        />
        <span
          class="onoffswitch-switch"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`should render correctly is fillable 3`] = `
<div>
  <div
    class="option-block"
  >
    <div
      class="label"
    >
      Infill
    </div>
    <div
      class="onoffswitch"
      id="infill"
    >
      <input
        class="onoffswitch-checkbox"
        readonly=""
        type="checkbox"
      />
      <label
        class="onoffswitch-label"
      >
        <span
          class="onoffswitch-inner"
        />
        <span
          class="onoffswitch-switch"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`should render correctly is not fillable 1`] = `<div />`;
